refactor: change vendor_key to path param
